removed the unnecessary copied array